Minor changes in the ui + confirms

--- a/meteor/imports/ui/components/config/athletes/left/index.html
+++ b/meteor/imports/ui/components/config/athletes/left/index.html
@@ -2,7 +2,9 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Gruppen</div>
+            <div class="left"></div>
+            <div class="center">Gruppen</div>
+            <div class="right"></div>
         </div>
     </div>
     <!-- Page Content -->
