--- a/meteor/imports/ui/components/config/athletes/middle/index.html
+++ b/meteor/imports/ui/components/config/athletes/middle/index.html
@@ -2,7 +2,9 @@
     <!-- navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Athleten</div>
+            <div class="left"></div>
+            <div class="center">Athleten</div>
+            <div class="left"></div>
         </div>
     </div>
     <!-- Page Content -->
