--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -2,7 +2,9 @@
     <!--navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Einstellungen des Athleten</div>
+            <div class="left"></div>
+            <div class="center">Einstellungen des Athleten</div>
+            <div class="right"></div>
         </div>
     </div>
     <!-- Page Content -->
