--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -2,23 +2,14 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Zugangscodes</div>
+            <div class="left"></div>
+            <div class="center">Zugangscodes</div>
+            <div class="right"></div>
         </div>
     </div>
     <!-- Page Content -->
     <div class="page">
         <div class="page-content">
-            <!-- Top Buttons -->
-            <div class="row">
-                <!-- Spacing -->
-                <div class="col-5"></div>
-                <!-- Quit to menu -->
-                <div class="col-45"><p><a href="#" id="button_menu" class="button button-fill color-red">Zum Hauptmenü</a></p></div>
-                <!-- Start server -->
-                <div class="col-45"><p><a href="#" id="button_start" class="button button-fill color-green">Server Starten</a></p></div>
-                <!-- Spacing -->
-                <div class="col-5"></div>
-            </div>
             <!-- Split Codes/controls -->
             <div class="row">
                 <!-- Codes -->
@@ -80,6 +71,7 @@
     <div class="toolbar">
         <div class="toolbar-inner">
             <a href="" class="item-link" id="link_back">Zurück</a>
+            <a href="" class="item-link" id="link_save">Speichern</a>
         </div>
     </div>
 </template>
