--- a/meteor/imports/ui/components/config/sports/main/index.html
+++ b/meteor/imports/ui/components/config/sports/main/index.html
@@ -4,7 +4,9 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Sportarteneinstellungen</div>
+            <div class="left"></div>
+            <div class="center">Sportarteneinstellungen</div>
+            <div class="right"></div>
         </div>
     </div>
     <!-- Page Content -->
@@ -14,8 +16,6 @@
             <div class="content-block-title">Auswahl der Sportarten</div>
             <div class="list-block">
                 <ul>
-
-
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
@@ -49,7 +49,7 @@
     <!-- Toolbar -->
     <div class="toolbar">
         <div class="toolbar-inner">
-            <a href="../" id="link_back" class="link">Zurück</a>
+            <a href="" id="link_back" class="link">Zurück</a>
             <a href="" id="link_next" class="item-link">Weiter</a>
         </div>
     </div>
