Moved input template and added swipe gesture

--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -1,4 +1,4 @@
-<template name="table_main">
+<template name="input">
     <div class="view navbar-through">
 
         <!-- Participant selection -->
