--- a/meteor/imports/ui/components/config/home/main/index.html
+++ b/meteor/imports/ui/components/config/home/main/index.html
@@ -15,8 +15,8 @@
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-title label">Name</div>
-                                <div class="item-input">
-                                    BJS OHG 2016
+                                <div class="item-input" id="current-contest-name">
+                                    Loading...
                                 </div>
                             </div>
                         </div>
@@ -25,8 +25,8 @@
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-title label">Wettkampfart</div>
-                                <div class="item-input">
-                                    Leichtatletik
+                                <div class="item-input" id="current-contest-type">
+                                    Loading...
                                 </div>
                             </div>
                         </div>
