--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -3,7 +3,7 @@
         <div class="view">
             <div class="page">
                 <div class="page-content login-screen-content">
-                    <div class="login-screen-title">runItEasy</div>
+                    <div class="login-screen-title">RunItEasy</div>
                     <div class="list-block">
                         <ul>
                             {{#each a in arrayify accounts}}
