Added logo to login screen (closes #37)

--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -35,6 +35,9 @@
                             Änderungen an den Daten vorgenommen werden!
                         </div>
                     </div>
+                    <div style="text-align: center;">
+                        <img src="/icons/Logo512.png" style="width: 70%; max-width: 300px;">
+                    </div>
                 </div>
             </div>
         </div>
