ConfigUI: implemented first 2 pages

--- a/meteor/imports/ui/components/config/home/left/index.html
+++ b/meteor/imports/ui/components/config/home/left/index.html
@@ -16,7 +16,7 @@
                 <!-- File List -->
                 <ul>
                     <!-- List entry for a new competition -->
-                    <li><a id="link-new_competition" href="/config/new" class="item-link" data-page="main-view">
+                    <li><a id="link-new_competition" href="#" class="item-link" data-page="main-view">
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-title">Neuer Wettkampf</div>
