--- a/meteor/imports/ui/components/config/new_competition/main/index.html
+++ b/meteor/imports/ui/components/config/new_competition/main/index.html
@@ -17,7 +17,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Name</div>
                                     <div class="item-input">
-                                        <input type="text" placeholder="Wettkampfname">
+                                        <input type="text" placeholder="Wettkampfname" id="text-comp_name">
                                     </div>
                                 </div>
                             </div>
